Рефакторинг Swagger описания
