# lib/behemoth_web/controllers/api/v1/auth/authenticate_controller.ex
@@ -1,4 +1,6 @@
-defmodule BehemothWeb.Api.V1.Auth.AuthController do
+defmodule BehemothWeb.Api.V1.Auth.AuthenticateController do
+  @moduledoc false
+
   use BehemothWeb, :controller
   use PhoenixSwagger
 
@@ -6,12 +8,14 @@ defmodule BehemothWeb.Api.V1.Auth.AuthController do
 
   swagger_path :ping do
     get("/api/v1/auth/ping")
+
+    tag("Auth.Authenticate")
     description("Проверка валидности доступа к закрытым токеном функциям  API")
 
     response(code(:ok), %{"message" => "pong"})
     response(code(:unauthorized), %{"error" => "Correct auth token must be provided."})
   end
 
-  @spec ping(Conn.t, map) :: Conn.t
+  @spec ping(Conn.t(), map) :: Conn.t()
   def ping(%Plug.Conn{} = conn, _params), do: json(conn, %{"message" => "pong"})
 end
